# smart-traffic-ai-FINAL

./: README.md
smart-traffic-ai/: .env.example  .gitignore  Dockerfile  Makefile  README.md  backend_log.txt  docker-compose.yml  pytest.ini  requirements.txt  run.py  setup.cfg  start.py  telemetry_dashboard_demo.py
smart-traffic-ai/analytics/: __init__.py  engine.py
smart-traffic-ai/backend/: app.py
smart-traffic-ai/backend/config/: __init__.py  settings.py
smart-traffic-ai/backend/middleware/: __init__.py  auth.py
smart-traffic-ai/backend/models/: __init__.py  traffic_record.py  user.py
smart-traffic-ai/backend/routes/: analytics.py  auth.py  crossroad.py  detection.py  live_traffic.py  prediction.py  signals.py  traffic.py  video_detection.py
smart-traffic-ai/backend/utils/: __init__.py  helpers.py
smart-traffic-ai/datasets/: __init__.py  prepare_dataset.py
smart-traffic-ai/datasets/processed/: traffic_dataset.csv
smart-traffic-ai/docs/: API_REFERENCE.md  DEPLOYMENT.md  IEEE_ABSTRACT.md  PROJECT_DOCUMENTATION.md
smart-traffic-ai/frontend/: Dockerfile  frontend_log.txt  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
smart-traffic-ai/frontend/src/: App.jsx  index.css
smart-traffic-ai/ml_models/cnn/: __init__.py  architecture.py  predict.py  train.py
smart-traffic-ai/ml_models/congestion/: __init__.py  evaluate.py  feature_engineering.py  predict.py  train_models.py
smart-traffic-ai/ml_models/faster_rcnn/: __init__.py  predictor.py
smart-traffic-ai/tests/: test_api.py  test_ml_models.py
(+33 files in other folders)
