[metadata]
name = smart-traffic-ai
version = 1.0.0
description = AI-Powered Intelligent Traffic Management System
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = MIT
python_requires = >=3.10

[options]
packages = find:
include_package_data = True

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 110
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    frontend/node_modules,
    frontend/dist,
    ml_models/yolo/runs
ignore = E501, W503
